--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@ title: Good At Inter.net
 
 # Link to avatar in the navbar (/assets/images/avatar.png). Leave empty if no logo desired. Two avatars for light and dark mode.
 # Avatar for light mode site
-lightavatar: /assets/images/Ben Covatar.png
+lightavatar: /assets/images/covatar 2022 yellow.png
 # Avatar for dark mode site
-darkavatar: /assets/images/Ben Covatar.png
+darkavatar: /assets/images/covatar 2022 yellow.png
 
 # A short description (e.g., A blog dedicated to reviewing cat gifs), used as part of the title tag like Ben's Awesome Site | A blog dedicated to reviewing cat gifs instead of Ben's Awesome Site | Long description about a blog dedicated to reviewing cat gifs that would be used when page.title is not defined.
 tagline: Slightly too online.
