--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,5 +6,7 @@
   link: /cookie-jar/
 - name: Mystery Hunt
   link: /mystery-hunt-2022/
+- name: Travels
+  link: /travels/
 - name: The Eurowhat? Podcast
   link: https://www.eurowhat.com
