--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,5 +8,7 @@
   link: /mystery-hunt-2022/
 - name: Travels
   link: /travels/
+- name: Find Me Online
+  link: /find-me/
 - name: The Eurowhat? Podcast
   link: https://www.eurowhat.com
