--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ author: BenMSmith
 logo: /assets/images/covatar 2022 yellow.png
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: UA-227476272-1
+google_analytics: G-298RKJMHG3
 
 permalink: /:year/:month/:day/:title/
 
